buildscript {
  repositories {
    mavenCentral()
    maven { url 'https://s01.oss.sonatype.org' }
    mavenLocal()
    google()
    gradlePluginPortal()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
  }
  dependencies {


  }
}

allprojects {
  apply plugin: 'eclipse'
  apply plugin: 'idea'
}

configure(subprojects) {
  apply plugin: 'java-library'
  sourceCompatibility = 18
  compileJava {
    options.incremental = true
  }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
  jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += "--enable-preview"
}

subprojects {
  version = '1.0.0'
  ext.appName = 'SpaceGame'
  repositories {
    mavenCentral()
    maven { url 'https://s01.oss.sonatype.org' }
    mavenLocal()
    gradlePluginPortal()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://jitpack.io' }
  }
}

eclipse.project.name = 'SpaceGame' + '-parent'
